# nde_research

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent_data/: agent_definitions.json  agent_descriptions.yaml  conversation_example.yaml  example_conversation.json  example_run.sh  nde_agent_definitions.json  nde_conversation_prompt.txt  qa_agent_definitions.json
paper/: 35-4_4_Matlock.md  35-4_4_Matlock.txt  39-3_7._Art_Greyson.md  39-3_7._Art_Greyson.txt  converter.sh  pdf2md.py  pdf2txt.py  vol12-no1-17.md  vol12-no1-17.txt  vol20-no2-101.md  vol20-no2-101.txt  vol20-no3-143.md  vol20-no3-143.txt  vol22-no1-5.md  vol22-no1-5.txt  vol23-no2-101.md  vol23-no2-101.txt
scripts/: agent_conversation.py  agent_debater.py  create_nde_database.py  create_nde_jc_database.py  html_to_md.py  html_to_txt.py  nde_analyzer.py  nde_jc_analyzer.py  rename_md_to_txt.sh
src/nde_research/: agents.py  analyzer.py  conversation.py  database.py  jc_analyzer.py  jc_database.py  jc_prompts.py  models.py  modules.py  prompts.py
